--- a/index.html
+++ b/index.html
@@ -36,25 +36,21 @@
       <div class="navbar">
         <div class="container">
           <div class="nav">
-            <div class="logo">
-              <p>Best <span>Tour</span> Plan</p>
-            </div>
-            <div class="search">
-              <div class="searchbar">
-                <input
-                  type="text"
-                  name=""
-                  id=""
-                  placeholder="Search Location"
-                />
+            <div class="otheri">
+              <div class="logo">
+                <p>Best <span>Tour</span> Plan</p>
               </div>
-              <div class="searchbutton">
-                <img src="./assets/icons/search.svg" alt="" />
+              <div class="search">
+                <input type="text" />
+                <div class="searchbtn">
+                  <img src="./assets/icons/search.svg" alt="">
+                </div>
               </div>
             </div>
-            <div class="others">
+            <div class="otherii">
               <div class="cart">
-                <img src="./assets/icons/Cart.png" alt="" />
+                <!-- <img src="./assets/icons/Cart.png" alt="" /> -->
+                <p>Cart</p>
               </div>
               <div class="account">
                 <img src="./assets/icons/profilepic.png" alt="" />
