feature/bug/chore/release/refactor/documentation/style/test(scope): subject body [Start/Delivers/Fixes/Finishes story ID]

--- a/index.html
+++ b/index.html
@@ -49,13 +49,19 @@
             </div>
             <div class="otherii">
               <div class="cart">
-                <!-- <img src="./assets/icons/Cart.png" alt="" /> -->
-                <p>Cart</p>
+                <img src="./assets/icons/Cart.svg" alt="" />
+                <!-- <p>Cart</p> -->
               </div>
               <div class="account">
                 <img src="./assets/icons/profilepic.png" alt="" />
                 <p class="username">Nathan</p>
                 <p class="more"></p>
+                <!-- <img src="./assets/icons/dropdown.svg" alt=""> -->
+              </div>
+              <div class="hamburgermenu display">
+                <hr class="display">
+                <hr class="display">
+                <hr class="display">
               </div>
             </div>
           </div>
